Removed Webkit from pipelines.