@@ -5,13 +5,14 @@ import com.microsoft.playwright.BrowserType;
 import com.microsoft.playwright.Playwright;
 import io.swaglabs.portal.qa.constants.WebPortalConstants;
 
-import java.util.Collections;
+import java.util.List;
 
 public class FirefoxBrowser implements IBrowser {
     @Override
-    public BrowserContext createSession(Playwright playwright) {
+    public BrowserContext createSession(Playwright playwright, boolean isHeadless) {
         return playwright.firefox().launch(new BrowserType.LaunchOptions()
-                .setHeadless(true)
-                .setArgs(Collections.singletonList(WebPortalConstants.MAXIMIZE_WINDOW))).newContext();
+                        .setHeadless(isHeadless)
+                        .setArgs(List.of(WebPortalConstants.MAXIMIZE_WINDOW)))
+                .newContext();
     }
 }
